--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    padding: 15px 30px;
+    padding: 15px;
     position: sticky;
     top: 0;
     z-index: 1000;
