--- a/src/Pages/ActiveBrother.css
+++ b/src/Pages/ActiveBrother.css
@@ -249,7 +249,6 @@ body {
   list-style-type: none;
   padding-left: 0;
   margin: 0;
-  text-align: left;
 }
 
 .brother-list-item {
@@ -267,11 +266,11 @@ body {
 
 .brother-list-item:hover {
   color: var(--text-light);
-  transform: translateX(5px);
+  transform: scale(1.03);
 }
 
 .brother-list-item::before {
-  content: "•";
+  content: "";
   color: var(--accent-color);
   position: absolute;
   left: 0;
