--- a/src/Pages/Recruitment.css
+++ b/src/Pages/Recruitment.css
@@ -4,7 +4,7 @@ body, html {
   height: 100%;
   overflow: auto;
   /* background-color: #0f0f0f; */
-  font-family: 'Old English Text MT', serif;
+  font-family: 'Palatino Linotype';
 }
 
 .recruitmentContainer {
@@ -320,7 +320,7 @@ body, html {
   text-decoration: none;
   border: 1px solid rgba(192, 192, 192, 0.4);
   border-radius: 4px;
-  font-family: 'Old English Text MT', 'Times New Roman', serif;
+  font-family: 'Palatino Linotype', 'Times New Roman', serif;
   font-size: 1rem;
   letter-spacing: 1px;
   transition: all 0.3s ease;
