--- a/src/Components/RushEventInfo.module.css
+++ b/src/Components/RushEventInfo.module.css
@@ -4,7 +4,7 @@ body, html {
     height: 100%;
     overflow: auto;
     background-color: #0f0f0f;
-    font-family: 'Old English Text MT', serif;
+    font-family: 'Playfair Display', 'Bookman Old Style', Bookman, 'Goudy Old Style', Garamond, 'Hoefler Text', 'Bitstream Charter', Georgia, serif;
   }
   
   .recruitmentContainer {
@@ -88,7 +88,7 @@ body, html {
   .chrome-event-title {
     font-size: 2.5rem;
     text-transform: uppercase;
-    font-family: 'Old English Text MT', serif;
+    font-family: 'Playfair Display', 'Bookman Old Style', Bookman, 'Goudy Old Style', Garamond, 'Hoefler Text', 'Bitstream Charter', Georgia, serif;
     color: silver;
   }
 
